--- a/package.json
+++ b/package.json
@@ -13,22 +13,28 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.5",
+    "@types/pouchdb-browser": "^6.1.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "ai": "^2.1.28",
     "autoprefixer": "10.4.14",
+    "chromadb": "^1.7.3",
+    "cohere-ai": "^7.6.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "langchain": "^0.0.209",
     "next": "14.0.1",
     "postcss": "8.4.27",
+    "pouchdb-browser": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "5.1.6",
     "zod": "^3.22.3",
     "zod-to-json-schema": "^3.21.4"
@@ -37,14 +43,14 @@
     "prettier": "3.0.0"
   },
   "resolutions": {
-    "@langchain/core": "0.1.2"
+    "@langchain/core": "0.1.4"
   },
   "overrides": {
-    "@langchain/core": "0.1.2"
+    "@langchain/core": "0.1.4"
   },
   "pnpm": {
     "overrides": {
-      "@langchain/core": "0.1.2"
+      "@langchain/core": "0.1.4"
     }
   }
 }
